<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:background="@drawable/all_corners_round">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="400dp"
        android:layout_height="700dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="900dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_arrow_drop_down_circle_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/carousel_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/all_corners_round"
                    android:clipChildren="true"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:carousel_alignment="center"
                    app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    tools:listitem="@layout/carousel_layout" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/carousel_recycler_view">

                    <TextView
                        android:id="@+id/productTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/food_title_name"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/food_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food_price"
                        android:textAlignment="textEnd"
                        android:textColor="@color/main_orange_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/seller_review"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView60">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/star_icon" />

                    <TextView
                        android:id="@+id/sellerRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="4.0 Rating"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/rating_icon" />

                    <TextView
                        android:id="@+id/reviewCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="0.00"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="Reviews"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:id="@+id/view3"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_weight="2"
                    android:background="#CC1818"
                    app:layout_constraintBottom_toTopOf="@+id/textView59"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <TextView
                    android:id="@+id/textView59"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/product_description"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <TextView
                    android:id="@+id/productDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/loading_description"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView59" />


                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="Quantity"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productDescription" />

                <TextView
                    android:id="@+id/pQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/productDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
